--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "h1b-prediction",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://visa-prediction.herokuapp.com/",
   "dependencies": {
     "@date-io/date-fns": "1.3.6",
     "@material-ui/core": "^4.9.0",
@@ -22,7 +23,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts build && npm install -g serve && serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
