--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "h1b-prediction",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://visa-prediction.herokuapp.com/",
   "dependencies": {
     "@date-io/date-fns": "1.3.6",
     "@material-ui/core": "^4.9.0",
@@ -19,11 +18,11 @@
     "date-fns": "^2.0.0-beta.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "npm install -g serve && serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
